--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "file-tailer",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Like tail -f command in unix.  Runs on Windows (no fs.watch).",
   "main": "index.js",
   "directories": {
@@ -27,5 +27,6 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/alexmiddeleer/node-file-tail/issues"
-  }
+  },
+  "homepage": "https://github.com/alexmiddeleer/node-file-tail"
 }
