--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "file-tailer",
+  "name": "file-tail",
   "version": "0.2.0",
   "description": "Like tail -f command in unix.  Runs on Windows (no fs.watch).",
   "main": "index.js",
