--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.2.0",
   "description": "Like tail -f command in unix.  Runs on Windows (no fs.watch).",
   "main": "index.js",
+  "preferGlobal": true,
+  "bin": {
+    "ftail": "bin/file-tail"
+  },
   "directories": {
     "test": "test"
   },
   "dependencies": {
-    "file-size-watcher": "~0.2.0"
+    "file-size-watcher": "~0.2.0",
+    "commander": "~2.1.0"
   },
   "devDependencies": {},
   "scripts": {
