tweaked name of path variable and removed preferGlobal

--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "0.2.0",
   "description": "Like tail -f command in unix.  Runs on Windows (no fs.watch).",
   "main": "index.js",
-  "preferGlobal": true,
   "bin": {
-    "ftail": "bin/file-tail"
+    "nftail": "bin/file-tail"
   },
   "directories": {
     "test": "test"
